# ChangeLog for app-arch/ppmd
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/ppmd/ChangeLog,v 1.3 2004/03/12 15:17:01 aliz Exp $

  12 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> ppmd-9.1.ebuild:
  amd64 unmask.

  08 Dec 2003; Seemant Kulleen <seemant@gentoo.org> ppmd-9.1.ebuild:
  fixes for broken aclocal, closing bug #35179 by Brian Harring
  <bdharring@wisc.edu>

*ppmd-9.1 (15 Nov 2003)

  15 Nov 2003; Seemant Kulleen <seemant@gentoo.org> ppmd-9.1.ebuild:
  PPM based compressor. Ebuild submitted by Brian Harring <bdharring@wisc.edu>
  in bug #33066
