@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/ppmd
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/ppmd/ChangeLog,v 1.3 2004/03/12 15:17:01 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/ppmd/ChangeLog,v 1.4 2004/03/22 10:18:02 seemant Exp $
+
+  22 Mar 2004; Seemant Kulleen <seemant@gentoo.org> ppmd-9.1.ebuild:
+  filter out -O3 flag, replace with -O2 flag. Also, replaced the head && mv
+  statement with an inline sed. closes bug #44529 by Tobias Minich
+  <belgabor@gmx.de>
 
   12 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> ppmd-9.1.ebuild:
   amd64 unmask.
